--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  background-color: #fffafc;
+  line-height: 1.7;
+}
+
+section {
+  scroll-margin-top: 80px;
+}
